--- a/Module.yaml
+++ b/Module.yaml
@@ -17,10 +17,16 @@ envs:                                   # Array of environment variables that wi
     description: URL for websocket
     value: ''
     type: 'text'
+    options: []
+    dependencies: []
+ports: []
+envPorts: []
 mounts: []
+envMounts: []
+devices: []
+envDevices: []
 tags:                                   # Array of tags.
   - 'NodeJS'
   - 'Input'
   - 'Websocket'
-  - 'Boilerplate 1.0.0'
 icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_websocket_input.png'    # Icon URL that will be displayed in the UI.
