--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       MODULE_NAME: "Websocket Ingress"
       MODULE_TYPE: "Input"
       EGRESS_URLS: "https://testdockercompose.free.beeceptor.com"
-      INGRESS_HOST: "0.0.0.0"
-      INGRESS_PORT: "80"
-      WEBSOCKET_URL: ''
+
+      WEBSOCKET_URL: 'wss://eu5pro.loriot.io/app?token=vgEALgAAABBldTVwcm8ubG9yaW90LmlvTTCGqQVZwa2MmmcOXWziOg=='
     ports:
       - 80:80
