--- a/Module.yaml
+++ b/Module.yaml
@@ -1,16 +1,16 @@
 displayName: 'Websocket Ingress'       # Display name for the module that will be displayed in the UI.
 moduleName: 'websocket-ingress'        # Module name that will be used to reference the module, and uniquely identify the module and their versions.
-description: 'The module should connect to Websocket endpoint and listen for incoming messages. Then forward the payload to next module in weeve appropriate JSON format.'       # Module description that will be displayed in the UI.
+description: 'The module should connect to Websocket endpoint and listen for incoming messages. Then forward the payload to next module in beetaone appropriate JSON format.'       # Module description that will be displayed in the UI.
 versionName: 'v1.0.0'                    # Module version name that will be used to reference the module version, and uniquely identify the module version with a common name.
 isPublic: true                          # Boolean value that indicates if the module is Public or Private.
 categories:                             # Array of category that will be used to group the module in the UI.
   - 'Ingress'
 type: 'Input'      # Module type (Input, Processing, Output) that will be used to group the module in the UI.
 image:
-  name: 'weevenetwork/websocket-ingress'     # Image name from the docker registry.
+  name: 'beetaone/websocket-ingress'     # Image name from the docker registry.
   tag: 'v1.0.0'                               # Image tag from the docker registry.
-  homepage: 'https://hub.docker.com/r/weevenetwork/websocket-ingress'      # Image homepage from the docker registry.
-repository: 'https://github.com/weeve-modules/websocket-ingress'     # Repository URL to source code.
+  homepage: 'https://hub.docker.com/r/beetaone/websocket-ingress'      # Image homepage from the docker registry.
+repository: 'https://github.com/beetaone/module-websocket-ingress'     # Repository URL to source code.
 envs:                                   # Array of environment variables that will be used to configure the module. Also used to show related fields on the UI.
   - name: Websocket URL
     key: WEBSOCKET_URL
@@ -29,4 +29,4 @@ tags:                                   # Array of tags.
   - 'NodeJS'
   - 'Input'
   - 'Websocket'
-icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_websocket_input.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_websocket_input.png'    # Icon URL that will be displayed in the UI.UI.
