--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,5 @@ COPY ./src /app/src
 RUN ["chmod", "+x", "/app/docker-entrypoint.sh"]
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
 
-# expose docker container port 80 according to weeve spec
+# expose docker container port 80 according to beetaone spec
 EXPOSE 80
-
